# fpagent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
docs/: getting-started.md  id-detection.md  manifest-format.md  operations.md  signing.md  supply-chain.md
src/fpagent/: __init__.py  _minhash.py  canonicalize.py  cli.py  fingerprint.py  id_detection.py  logutil.py  manifest.py  parser.py  schema.py  signing.py  verify.py  version.py
src/fpagent/schemas/: manifest.schema.json
tests/: test_canonicalize.py  test_conformance.py  test_end_to_end.py  test_fingerprint.py  test_id_detection.py  test_logging.py  test_minhash.py  test_parser.py  test_schema.py  test_signing.py  test_streaming.py
tests/benchmarks/: bench_fingerprint.py
tests/fixtures/: articles.jsonl  dermatology.csv  generate_dermatology.py
tests/fixtures/articles/: 000.json  001.json  002.json
tests/fixtures/conformance/: tickets.csv  tickets.expected.json
